--- a/pages/layout.css
+++ b/pages/layout.css
@@ -80,20 +80,136 @@ footer{
     display: flex;
     float: left;
     width: 50%;
-    background-color: honeydew;
-    opacity: .3;
+    background-color: white;
+}
+/* IMAGE */
+.ptr{
+    width: 12vw;
+    height: 16vw;
+    border-radius: 10px;
+}
+.lands{
+    width: 16vw;
+    height: 12vw;
+    border-radius: 10px;
+}
+.row1_left .ptr{position: absolute;}
+.row1_left .lands{position: absolute;}
+
+#ECHA{
+    margin-top: 5vh;
+    margin-left: 5vw;
+}
+#SOLPAN{
+    margin-top: 20vh;
+    margin-left: 16.5vw;
+}
+#ROV{
+    margin-top: 30vh;
+    margin-left: 32vw;
 }
 .row1_right{
     display: flex;
+    justify-content: center;
     float: right;
     flex-direction: column;
     width: 50%;
     background-color: honeydew;
-    opacity: .7;
+}
+article {
+    align-items: center;
+    opacity: 5;
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: justify;
+}
+article p, .heading_1{
+    padding-bottom: 10px;
+}
+.list_skill li{
+    list-style-type: circle;
+    margin-left: 10%;
 }
 
 
 /* == Row 2 == */
+.expertise{
+    font-size: 50px;
+    padding: 40px;
+    color: black;
+}
+
+.a{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+}
+.b{
+    border:transparent;
+    padding: 0px;
+    box-shadow: 5px 8px 10px 2px #c6cccc;
+
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    width: 250px;
+    height: 300px;
+    background-color:white;
+    margin: 20px;
+    color:black;
+    font-size: 25px;
+}
+.b:active, .b:hover{
+    transform: scale(1.1);
+}
+.imgexp{
+    /* width: 150px; */
+    height: 150px;
+}
+ul li article footer .button{
+    color: honeydew;
+    font-size: large;
+}
+/* Button */
+.button, .buttoninverse{
+    float: left;
+    margin: 10px;
+}
+.buttoninverse ul li{
+    padding-left: 20px;
+}
+
+.button{
+    font-family: Arial;
+    color: honeydew;
+    padding: 10px 20px 10px 20px;
+    border-radius: 10px;
+    background-color:#1d4e89;
+}
+.buttoninverse{
+    font-family: Arial;
+    color: #1d4e89;
+    padding: 10px 20px 10px 20px;
+    border-radius: 10px;
+    border-color:#1d4e89;
+    border-width: 1px;
+    border-style:solid;
+}
+.button:active, .button:hover{
+    background:#00b3ca;
+    transition: .5s;
+    transform: scale(1.1);
+}
+.buttoninverse:active, .buttoninverse:hover{
+    background:#1d4e89;
+    color:honeydew;
+    transition: .5s;
+    transform: scale(1.1);
+}
+/* ========================================== */
 
 /* == Row 3 == */
 #footer{
