--- a/style-project.css
+++ b/style-project.css
@@ -29,7 +29,7 @@ footer{
 
 .row0 {height: 80px; position: relative; background-color:#1d4e89}
 .row1 {height: 450px; position:relative; align-items: center;background-color: white;}
-.row2 {height: 600px; position:relative;}
+/* .row2 {height: 600px; position:relative;} */
 .row3 {height: 90px; position: relative;}
 /* ========================================== */
 
