--- a/pages/layout.css
+++ b/pages/layout.css
@@ -1,4 +1,3 @@
-/* @import url("../style-project.css"); */
 *{
     padding: 0;
     margin: 0;
@@ -116,12 +115,6 @@ footer{
     width: 50%;
     background-color: #9dc6d858;
 }
-article {
-    align-items: center;
-    opacity: 5;
-    margin-left: 10%;
-    margin-right: 10%;
-}
 article p, .heading_1{
     padding-bottom: 10px;
     text-align: justify;
@@ -131,14 +124,18 @@ article p, .heading_1{
     margin-left: 10%;
 }
 
-
 /* == Row 2 == */
+article {
+    align-items: center;
+    opacity: 5;
+    margin-left: 10%;
+    margin-right: 10%;
+}
 .expertise{
     font-size: 50px;
     padding: 40px;
     color: black;
 }
-
 .a{
     display: flex;
     flex-wrap: wrap;
@@ -169,19 +166,17 @@ article p, .heading_1{
     /* width: 150px; */
     height: 150px;
 }
+footer{
+    margin-top: 10px;
+    display: flex;
+    justify-content: center;
+}
 ul li article footer .button{
+    float: none;
     color: honeydew;
     font-size: large;
 }
 /* Button */
-.button, .buttoninverse{
-    float: left;
-    margin: 10px;
-}
-.buttoninverse ul li{
-    padding-left: 20px;
-}
-
 .button{
     font-family: Arial;
     color: honeydew;
@@ -189,23 +184,8 @@ ul li article footer .button{
     border-radius: 10px;
     background-color:#1d4e89;
 }
-.buttoninverse{
-    font-family: Arial;
-    color: #1d4e89;
-    padding: 10px 20px 10px 20px;
-    border-radius: 10px;
-    border-color:#1d4e89;
-    border-width: 1px;
-    border-style:solid;
-}
 .button:active, .button:hover{
     background:#00b3ca;
-    transition: .5s;
-    transform: scale(1.1);
-}
-.buttoninverse:active, .buttoninverse:hover{
-    background:#1d4e89;
-    color:honeydew;
     transition: .5s;
     transform: scale(1.1);
 }
