--- a/pages/layout.css
+++ b/pages/layout.css
@@ -5,6 +5,9 @@
     list-style: none;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 body {
     background-color: white;
     font-family: Arial;
