--- a/style-project.css
+++ b/style-project.css
@@ -9,6 +9,9 @@
     list-style: none;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 body {
     background-color: white;
     font-family: Arial;
