--- a/style-project.css
+++ b/style-project.css
@@ -1,5 +1,7 @@
 /* Style css */
 /* #9dc6d858 */
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Caption&display=swap');
+
 .home, .page{}
 .wrapper{display:block; position:relative; width:100%; margin:0; padding:0; text-align:left; word-wrap:break-word;}
 *{
@@ -8,6 +10,7 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    font-family: 'PT Sans Caption', sans-serif;
 }
 html{
     scroll-behavior: smooth;
