--- a/pages/layout.css
+++ b/pages/layout.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans+Caption&display=swap');
+
 *{
     padding: 0;
     margin: 0;
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
+    font-family: 'PT Sans Caption', sans-serif;
 }
 html{
     scroll-behavior: smooth;
